# onlain_store-django

./: .env.exemple  README.md  catalog_fixture.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  home.html
blog/templates/blog/includes/: top_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  validator.py  views.py
catalog/management/commands/: add_catalog.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_alter_product_photo_product.py  0004_product_is_published.py  0005_alter_product_options.py  0006_product_owner_alter_product_is_published.py
catalog/templates/catalog/: add_product.html  base.html  category_list.html  contacts.html  home.html  product_category.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_list.html
catalog/templates/catalog/includes/: inc_menu.html  top_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_remove_user_username.py
users/templates/users/: edit_form.html  login.html  register.html
